Fixed the illustration not showing bug; adjusted some css

--- a/src/components/ComingSoon/ComingSoon.module.css
+++ b/src/components/ComingSoon/ComingSoon.module.css
@@ -21,13 +21,20 @@
     margin-top: 50px;
 }
 
-.flexContainer > div:first-child > h1 {
+.flexContainer > .helptext {
+     order: 1;
+}
+.flexContainer > img {
+     order: 2;
+}
+
+.flexContainer > .helptext > h1 {
     color: var(--heading-text-color);
     font-family: 'Bree Serif', serif;
     font-weight: 500;
     font-size: 2.2em;
 }
-.flexContainer > div:first-child > p {
+.flexContainer > .helptext > p {
     color: var(--text-color);
     line-height: 30px;
     margin: 30px auto;
@@ -52,25 +59,26 @@
         width: 90%;
     }   
     .flexContainer {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        display: block;
+    }
+    .flexContainer > * {
+        width: 90%;
+        margin: 0 auto;
     }
     .flexContainer > img {
-        order: 1;
         width: 450px;
+        margin: 50px auto;
     }
-    .flexContainer > div:first-child {
+    .flexContainer > .helptext {
         order: 2;
     }
-    .flexContainer > div:first-child > h1  {
+    .flexContainer > .helptext > h1  {
         font-size: 1.4em;
     }
 }
 
 @media screen and (max-width: 700px) {
     .flexContainer > img {
-        order: 1;
         width: 300px;
     }
 }
